--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-	"dependencies": {
-		"express": "^4.19.1"
-	}
+  "dependencies": {
+    "express": "^4.19.1"
+  },
+  "scripts": {
+    "start": "node app.js"
+  }
 }
